[tool.poetry]
name = "pythonwebhw9"
version = "0.1.0"
description = ""
authors = ["Oleksandra Melnyk <oleksandramelnyk.ibm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
Faker = "^15.1.1"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
phonenumbers = "^8.12.57"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
